--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <h2> Issue Bot Camera Capture Archive</h2>
 
   <img src="images/adam.jpg" alt="Avi">
-  <a target="_blank"><img src="images/spencer.jpg" alt="Spencer"></a>
+  <a href target="_blank"><img src="images/spencer.jpg" alt="Spencer"></a>
 
 </body>
 </html>
